Fixed subtitle alignment for smaller widths on game details page. Fixes #14.

--- a/client/styles/type.styl
+++ b/client/styles/type.styl
@@ -111,6 +111,19 @@ h4.h--large
 .h--code
 	font-family $font-code
 
+.title
+	display flex
+	align-items flex-end
+	flex-wrap wrap
+	> h1
+		white-space nowrap
+	.title-main
+		flex-grow 1
+		margin-bottom 0
+	.title-sub
+		line-height 100%
+		margin-top 5px
+		margin-bottom 0
 
 // Pre Headings
 //
